refactor configuration and logging settings; update DTOs for JSON property mapping